--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h3{
 .btn-jogar{
     padding: 8px 15px;
     border: 0;
-    background-color: var(--primary-color);
+    background-color: grey;
     border-radius: 5px;
     margin-top: 20px;
 }
